--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>17.0.1</version>
+            <classifier>linux</classifier>
         </dependency>
     </dependencies>
 
